--- a/custom_builds/104/distros/2.9.x/pom.xml
+++ b/custom_builds/104/distros/2.9.x/pom.xml
@@ -93,7 +93,6 @@
                 <module>assignment</module>
                 <module>assignment2</module>
                 <module>authz</module>
-		<module>bigbluebutton-sakai/bbb-tool</module>
 		<module>blogwow</module>
                 <module>calendar</module>
                 <module>chat</module>
@@ -133,6 +132,12 @@
                 <module>warehouse</module>
                 <module>web</module>
             </modules>
+        </profile>
+        <profile>
+          <id>experimental</id>
+          <modules>
+            <module>bigbluebutton-sakai/bbb-tool</module>
+          </modules>
         </profile>
         <profile>
             <id>experimental</id>
