--- a/custom_builds/8/distros/10.x/pom.xml
+++ b/custom_builds/8/distros/10.x/pom.xml
@@ -118,6 +118,10 @@
                 <module>warehouse</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>blogwow</module>
+                <module>etudes-util</module>
+                <module>evaluation</module>
+                <module>melete</module>
             </modules>
         </profile>
         <profile>
