--- a/custom_builds/5/distros/10.x/deploy/shared/pom.xml
+++ b/custom_builds/5/distros/10.x/deploy/shared/pom.xml
@@ -85,6 +85,117 @@
             <version>2.1_3</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- Lucene jars required by Elasticsearch and help -->
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-core</artifactId>
+			<version>${sakai.lucene.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-analyzers-common</artifactId>
+			<version>${sakai.lucene.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-queries</artifactId>
+			<version>${sakai.lucene.version}</version>
+			<scope>compile</scope>
+		</dependency>      
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-queryparser</artifactId>
+            <version>${sakai.lucene.version}</version>
+            <scope>compile</scope>
+        </dependency>      
         
+	        <!-- Elasticsearch and Lucene jars required by search -->
+		<dependency>
+			<groupId>org.fusesource</groupId>
+			<artifactId>sigar</artifactId>
+			<version>${sakai.sigar.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-codecs</artifactId>
+			<version>${sakai.lucene.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-grouping</artifactId>
+			<version>${sakai.lucene.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-memory</artifactId>
+			<version>${sakai.lucene.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-misc</artifactId>
+			<version>${sakai.lucene.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-highlighter</artifactId>
+			<version>${sakai.lucene.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-sandbox</artifactId>
+			<version>${sakai.lucene.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-suggest</artifactId>
+			<version>${sakai.lucene.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-spatial</artifactId>
+			<version>${sakai.lucene.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-join</artifactId>
+			<version>${sakai.lucene.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-expressions</artifactId>
+			<version>${sakai.lucene.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.vividsolutions</groupId>
+			<artifactId>jts</artifactId>
+			<version>${sakai.jts.version}</version>
+			<scope>compile</scope>
+		</dependency>
+        <dependency>
+        	<groupId>com.spatial4j</groupId>
+        	<artifactId>spatial4j</artifactId>
+        	<version>0.4.1</version>
+        	<scope>compile</scope>
+        </dependency>
+        <dependency>
+        	<groupId>org.elasticsearch</groupId>
+        	<artifactId>elasticsearch</artifactId>
+        	<version>${sakai.elasticsearch.version}</version>
+        	<scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
