--- a/custom_builds/1/distros/10.x/pom.xml
+++ b/custom_builds/1/distros/10.x/pom.xml
@@ -127,7 +127,7 @@
                 <module>melete</module>
                 <module>evaluation</module>
                 <module>content-review/contentreview-impl</module>
-                <module>bigbluebutton-sakai/bbb-tool</module>
+               <!-- <module>bigbluebutton-sakai/bbb-tool</module> -->
             </modules>
         </profile>
         <profile>
