Add irubric XIF-837457

--- a/custom_builds/51/distros/10.x/pom.xml
+++ b/custom_builds/51/distros/10.x/pom.xml
@@ -122,6 +122,8 @@
                 <module>etudes-util</module>
                 <module>melete</module>
                 <module>bigbluebutton-sakai/bbb-tool</module>
+                <module>irubric-core</module>
+                <module>irubric-tool</module>
             </modules>
         </profile>
         <profile>
