--- a/custom_builds/51/distros/10.x/pom.xml
+++ b/custom_builds/51/distros/10.x/pom.xml
@@ -121,7 +121,7 @@
                 <module>itunesu-tool</module>
                 <module>etudes-util</module>
                 <module>melete</module>
-                <module>bigbluebutton-sakai/bbb-tool</module>
+                <!--module>bigbluebutton-sakai/bbb-tool</module-->
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
             </modules>
