--- a/custom_builds/67/lessonbuilder/lessonbuilder-10.x_custom/api/pom.xml
+++ b/custom_builds/67/lessonbuilder/lessonbuilder-10.x_custom/api/pom.xml
@@ -28,5 +28,9 @@
             <version>2.4</version>
             <scope>provided</scope>
         </dependency>
+    	<dependency>
+            <groupId>org.sakaiproject.scheduler</groupId>
+            <artifactId>scheduler-api</artifactId>
+        </dependency>
     </dependencies>
 </project>
