--- a/custom_builds/67/lessonbuilder/lessonbuilder-10.x_custom/components/pom.xml
+++ b/custom_builds/67/lessonbuilder/lessonbuilder-10.x_custom/components/pom.xml
@@ -61,6 +61,10 @@
             <artifactId>json-simple</artifactId>
 	    <version>1.1.1</version>
         </dependency>
+	<dependency>
+            <groupId>org.sakaiproject.scheduler</groupId>
+            <artifactId>scheduler-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
