removing wicket for scorm

--- a/custom_builds/10/distros/10.x/pom.xml
+++ b/custom_builds/10/distros/10.x/pom.xml
@@ -119,7 +119,7 @@
                 <module>web</module>
                 <module>webservices</module>
             	<module>etudes-util</module>
-		<module>wicket-for-scorm</module>
+	<!--	<module>wicket-for-scorm</module> -->
 		<module>blogwow</module>
 		<module>evaluation</module>
 		<module>linktool</module>
