comment out scorm

--- a/custom_builds/10/distros/10.x/pom.xml
+++ b/custom_builds/10/distros/10.x/pom.xml
@@ -124,7 +124,7 @@
 		<module>evaluation</module>
 		<module>linktool</module>
 		<module>melete</module>
-		<module>scorm</module>
+	<!--	<module>scorm</module>  -->
 		<module>bigbluebutton-sakai/bbb-tool</module>
                 <module>sms</module>
             </modules>
