comment out bbb

--- a/custom_builds/60/distros/10.x/pom.xml
+++ b/custom_builds/60/distros/10.x/pom.xml
@@ -124,7 +124,7 @@
                 <module>etudes-util</module>
                 <module>melete</module>
                 <module>content-review/contentreview-impl</module>
-                <module>bigbluebutton-sakai/bbb-tool</module>
+            <!--    <module>bigbluebutton-sakai/bbb-tool</module>  -->
             </modules>
         </profile>
         <profile>
