--- a/custom_builds/118/distros/10.x/pom.xml
+++ b/custom_builds/118/distros/10.x/pom.xml
@@ -120,7 +120,7 @@
                 <module>webservices</module>
                 <module>blogwow</module>
                 <module>evaluation</module>
-                <module>bigbluebutton-sakai/bbb-tool</module>
+         <!--       <module>bigbluebutton-sakai/bbb-tool</module> -->
             </modules>
         </profile>
         <profile>
