--- a/custom_builds/142/distros/10.x/pom.xml
+++ b/custom_builds/142/distros/10.x/pom.xml
@@ -123,6 +123,7 @@
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
                 <module>gradebook2</module>
+                <module>gradebook-export</module>
             </modules>
         </profile>
         <profile>
