EST-22 added multipart text and html boundaries

--- a/custom_builds/67/lessonbuilder/lessonbuilder-10.x_custom/components/pom.xml
+++ b/custom_builds/67/lessonbuilder/lessonbuilder-10.x_custom/components/pom.xml
@@ -55,6 +55,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>${sakai.spring.artifactId}</artifactId>
             <version>${sakai.spring.version}</version> 
+        </dependency>
+        <dependency>
+        	<groupId>commons-lang</groupId>
+        	<artifactId>commons-lang</artifactId>
         </dependency>      
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
