--- a/sakai/branches/sakai-10.x/pom.xml
+++ b/sakai/branches/sakai-10.x/pom.xml
@@ -119,6 +119,8 @@
                 <module>web</module>
                 <module>webservices</module>
                 <module>gradebook-export</module>
+                <module>sms</module>
+                <module>qna</module>
             </modules>
         </profile>
         <profile>
