--- a/custom_builds/51/site-manage/branches/sakai-10.x/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/custom_builds/51/site-manage/branches/sakai-10.x/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -579,7 +579,7 @@ sitetype.template.copy.users.info = <strong>Copy Users:</strong> users specified
 sitetype.template.copy.content.info = <strong>Copy Content:</strong> content included in the template will be copied to your site. This may consist of material selected by your campus, school or department.  
 sitetype.template.publish.now = <strong>Publish Site:</strong> site will be published inmediately. Leave unchecked to keep as a private draft.  
 
-sitetype.chothetyp.withouttemplate = Choose the type of site you want to create. Only instructors can create official course sites.  Anyone in the Ithaca College community can create project sites. 
+sitetype.chothetyp.withouttemplate = Choose the type of site you want to create. Only instructors can create official course sites.  Anyone in the Ithaca College community can create project sites. NOTE: Students, if you do not see a tab for your course, contact your instructor for information about when your official course website will be available.
 sitetype.course.template.info=(select from templates for common <u>class</u> types)
 sitetype.project.template.info=(select from templates for common <u>project</u> types)
 sitetype.other.template.info=(select from templates created by <u>specific schools or campuses</u>)
