--- a/custom_builds/9/distros/10.x/pom.xml
+++ b/custom_builds/9/distros/10.x/pom.xml
@@ -114,6 +114,9 @@
                 <module>velocity</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>blogwow</module>
+                <module>evaluation</module>
+                <module>bigbluebutton-sakai/bbb-tool</module>
             </modules>
         </profile>
         <profile>
