--- a/custom_builds/9/distros/10.x/pom.xml
+++ b/custom_builds/9/distros/10.x/pom.xml
@@ -84,6 +84,7 @@
                 <module>memory</module>
                 <module>message</module>
                 <module>msgcntr</module>
+                <module>osp</module>
                 <module>podcasts</module>
                 <module>polls</module>
                 <module>portal</module>
