--- a/custom_builds/9/distros/10.x/pom.xml
+++ b/custom_builds/9/distros/10.x/pom.xml
@@ -83,6 +83,7 @@
                 <module>mailsender</module>
                 <module>memory</module>
                 <module>message</module>
+                <module>metaobj</module>
                 <module>msgcntr</module>
                 <module>osp</module>
                 <module>podcasts</module>
@@ -113,6 +114,7 @@
                 <module>userauditservice</module>
                 <module>usermembership</module>
                 <module>velocity</module>
+                <module>warehouse</module>
                 <module>web</module>
                 <module>webservices</module>
                 <module>blogwow</module>
