Custom user directory provider

--- a/custom_builds/44/providers/providers-10.x_custom/pom.xml
+++ b/custom_builds/44/providers/providers-10.x_custom/pom.xml
@@ -29,6 +29,7 @@
     <module>kerberos</module>
     <module>openldap</module>
     <module>sample</module>
+    <module>ico</module>
   </modules>
 
   <profiles>
