--- a/custom_builds/44/distros/10.x/pom.xml
+++ b/custom_builds/44/distros/10.x/pom.xml
@@ -56,6 +56,7 @@
                 <module>assignment</module>
                 <module>authz</module>
                 <module>basiclti</module>
+                <module>blogwow</module>
                 <module>calendar</module>
                 <module>chat</module>
                 <module>citations</module>
