BFQ-232717 add gradebook export

--- a/custom_builds/115/builds/10.x/pom.xml
+++ b/custom_builds/115/builds/10.x/pom.xml
@@ -93,7 +93,6 @@
                 <module>presence</module>
                 <module>profile2</module>
                 <module>providers</module>
-                <module>reference</module>
                 <module>reset-pass</module>
                 <module>rights</module>
                 <module>roster2</module>
@@ -118,6 +117,9 @@
                 <module>warehouse</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>blogwow</module>
+                <module>evaluation</module>
+                <module>gradebook-export</module>
             </modules>
         </profile>
         <profile>
