--- a/custom_builds/152/cloud-content/sakai10.x_custom/pack/pom.xml
+++ b/custom_builds/152/cloud-content/sakai10.x_custom/pack/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.sakaiproject.content</groupId>
     <artifactId>cloud-content</artifactId>
-    <version>11-SNAPSHOT</version><!-- KernelVersion -->
+    <version>10.4</version><!-- KernelVersion -->
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>org.sakaiproject.content</groupId>
       <artifactId>cloud-content-impl</artifactId>
-      <version>11-SNAPSHOT</version>
+      <version>10.4</version>
     </dependency>
   </dependencies>
 
