Remove BBB from build

--- a/custom_builds/152/distros/sakai-10.x/pom.xml
+++ b/custom_builds/152/distros/sakai-10.x/pom.xml
@@ -62,7 +62,7 @@
                 <module>authz</module>
                 <module>basiclti</module>
 		        <module>blogwow</module>
-                <module>bigbluebutton</module>
+                <!-- module>bigbluebutton</module -->
                 <module>calendar</module>
                 <module>chat</module>
                 <module>citations</module>
