Remove rsmart antivirus from build, already included in 10

--- a/custom_builds/152/distros/sakai-10.x/rsmart/pom.xml
+++ b/custom_builds/152/distros/sakai-10.x/rsmart/pom.xml
@@ -14,7 +14,7 @@
   <modules>
     <module>grade-exporter</module>
     <!--module>virtual_classroom</module-->
-    <module>antivirus</module>
+    <!-- module>antivirus</module -->
     <module>brands</module>
     <module>mvel</module>
     <module>certification</module>
