bigbluebutton point to LS branch

--- a/custom_builds/51/distros/10.x/pom.xml
+++ b/custom_builds/51/distros/10.x/pom.xml
@@ -117,11 +117,13 @@
                 <module>webservices</module>
                 <module>blogwow</module>
                 <module>content-review/contentreview-impl</module>
+                <!--
                 <module>adobeconnect</module>
                 <module>itunesu-tool</module>
                 <module>etudes-util</module>
                 <module>melete</module>
-                <!--module>bigbluebutton-sakai/bbb-tool</module-->
+                -->
+                <module>bigbluebutton-sakai/bbb-tool</module>
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
             </modules>
