--- a/custom_builds/6/distros/10.x/pom.xml
+++ b/custom_builds/6/distros/10.x/pom.xml
@@ -123,7 +123,7 @@
                 <module>etudes-util</module>
                 <module>melete</module>
                 <!-- module>iclicker</module -->
-                <module>bigbluebutton-sakai/bbb-tool</module>
+                <!--module>bigbluebutton-sakai/bbb-tool</module -->
             </modules>
         </profile>
         <profile>
