--- a/custom_builds/103/config/sakai-10.x/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
+++ b/custom_builds/103/config/sakai-10.x/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
@@ -57,6 +57,20 @@
 # DEFAULT: true
 # portal.use.tutorial=false
 
+# SAK-25634
+# Add support for Google Analytics to the Portal
+# Google analytics is NOT enabled by default, setting these will enable it
+#
+# portal.google.analytics_id=UA-XXXXXX-XX
+# portal.google.analytics_domain=yoursakaihost.edu
+# portal.google.analytics_detail=true
+
+# SAK-28052
+# Add support for Universal Google Analytics
+# Google analytics is NOT enabled by default, setting these will enable it
+#
+# portal.google.universal_analytics_id=UA-XXXXXX-XX
+
 # ########################################################################
 # GATEWAY SITE
 # ########################################################################
@@ -473,6 +487,15 @@
 # DEFAULT: true (on)
 # content.useMimeMagic=false
 
+# KNL-1306 - Support to ignore content from certain types and extensions
+# If this file extension is in the list, the content from the file will not be used to aide in detection of the type
+# DEFAULT: js
+# content.mimeMagic.ignorecontent.extensions=js,html,txt
+
+# If the mime type is in the list returned, it will be redetected without content which may produce a different result
+# DEFAULT: none
+# content.mimeMagic.ignorecontent.mimetypes=text/html,text/plain
+
 # ########################################################################
 # DIGEST
 # ########################################################################
@@ -763,6 +786,10 @@
 # Allows disabling of the Profile2 tool in Neo-portal
 # DEFAULT: true
 # portal.use.profile=false
+
+# Allows for adding addditional code into the header of both the standard and pdaa portals, for example for adding in kaltura or other javascript code
+# DEFAULT: Empty, no value
+# portal.include.extrahead=<script type="text/javascript" language="JavaScript" src="/kaltura/javascript/kaltura-display.js"></script>
 
 # ########################################################################
 # SECURITY
@@ -1476,6 +1503,20 @@
 # Controls the display of the "Total Points" column on the overview screen.
 # DEFAULT: false (Total Points column is not shown)
 #gradebook.display.total.points=false
+
+
+# SAK-27973 Allow for changing default values for displaying course grade/points
+# Default for course points being display (you need the option above for showCoursePoints
+# Default: false
+# gradebook.coursepoints.displayed=true
+
+# Default for course grade displayed
+# Default: false
+# gradebook.coursegrade.displayed=true
+
+# Default for assignments displayed
+# Default: true
+# gradebook.assignments.displayed=false
 
 # ASSIGNMENT 1
 # Allows an instructor or any user with assignments management permissions to submit the assignment on behalf of a student 
@@ -2355,6 +2396,14 @@
 # DEFAULT: true
 # site.setup.import.file = false
 
+# SAK-27575: Sakai 10.0 introduced a notification to the current user that their import is complete
+# DEFAULT: true
+# site.setup.import.notification = false
+
+# SAK-22432: Template descriptions are not copied
+# DEFAULT: true
+# site.setup.copy.template.description = false
+
 # Comma separated list of site types to hide PageOrder tab, 
 # e.g. if set to "course,project", the PageOrder tool tab will be hidden for all course sites and project sites.
 # DEFAULT: none (null)
@@ -2377,6 +2426,10 @@
 # DEFAULT: admins
 # Disable it by setting to "none"
 # site.setup.showOrphanedMembers=admins
+
+### SAK-22510 Add a site id column to worksite setup
+# DEFAULT: false
+# site.setup.showSiteIdColumn=true
 
 ### SAK-23567 Flexible way to shorten site title in tabs
 ## Max length for site title display 
@@ -2574,6 +2627,10 @@
 # DEFAULT: none (null)
 #samigo.question.show.calculatedquestion=false
 
+
+# In the PDF print output, setting this to true will remove all HTML formatting from the questions and answers (This was a legacy setting just added incase someone was using it or it was causing problems)
+# Default: false
+# samigo.pdf.convertformattedtext=true
 
 #########################################
 # WORKSITE SETUP/SITE INFO
@@ -2995,6 +3052,14 @@
 # DEFAULT: true
 # msgcntr.forums.import.openCloseDates=true
 
+# SAK-24778 Remove all deleted messages from user display
+# DEFAULT: false
+# msgcntr.forums.exclude.deleted=true
+
+# SAK-24618 Remove deleted messages from display if message has no descendants
+# DEFAULT: true
+# msgcntr.forums.exclude.deleted.onlywithoutdescendant=false 
+
 ## SAK-19178
 # Should we load the initial jobs on startup.
 # - "init" will schedule the jobs *only* on the first startup of Sakai.
@@ -3159,6 +3224,10 @@
 # Sets the max number of resends before it expires the token
 # DEFAULT: 10
 # accountValidator.maxResendAttempts=
+
+# Sets the 'from' email address and name for password reset emails (if not set, falls back to mail.support)
+# accountValidator.checkValidations.fromEmailAddress=
+# accountValidator.checkValidations.fromEmailName=
 
 
 ## NOTE: All properties in this files should be commented out AND should include a comment indicating the default value and a sample value
