Add signup to build GCK-563267

--- a/custom_builds/144/distros/2.9.x/pom.xml
+++ b/custom_builds/144/distros/2.9.x/pom.xml
@@ -131,6 +131,7 @@
 		<module>melete</module>
 		<module>content-review/contentreview-impl</module>
 		<module>jforum</module>
+		<module>signup</module>
 <!--
                 <module>osp/xsltcharon/xsltcharon-portal/xsl-portal</module>
                 <module>metaobj</module>
