--- a/custom_builds/74/distros/10.x/pom.xml
+++ b/custom_builds/74/distros/10.x/pom.xml
@@ -117,7 +117,7 @@
                 <module>bigbluebutton-sakai/bbb-tool</module>
 		<module>evaluation</module>
 		<module>da_evalprovider</module>
-		<module>kaltura</module>
+	<!--	<module>kaltura</module> -->
             </modules>
         </profile>
         <profile>
