Updating assignment --- Merging r319935 through r321152 into '.':

--- a/assignment/assignment-10.x_iRubric/assignment-bundles/resources/assignment.properties
+++ b/assignment/assignment-10.x_iRubric/assignment-bundles/resources/assignment.properties
@@ -495,7 +495,7 @@ list.itemsper = items...
 update = Update
 removeSelected = Removed Selected
 subasstudent		= Submit as Student
-alert.globalNavi	= If you choose to exit without clicking any action button at the bottom of this page, you will lose your work. Please choose one of these buttons or navigate to your chosen page and abandon your work in this page.
+alert.globalNavi	= If you choose to exit without clicking any of the assignment submission navigation action buttons at the top or bottom of this page, you will lose your work. Please choose one of these buttons or navigate to your chosen page and abandon your work on this page.
 viewassign		= View Assignment
 subexampleassign	= Submit Example Assignment
 viewexampleassign= View Example Assignment
@@ -718,6 +718,10 @@ nav.prev=< Previous
 nav.list=Return to List
 nav.next=Next >
 nav.message=(Changes will be saved)
+nav.header = Navigate Submissions
+nav.prev.ungraded = < Previous Ungraded
+nav.next.ungraded = Next Ungraded >
+nav.view.subsOnly = Navigate between students with submissions only
 
 gen.opendate.annc = Announce the open date
 
@@ -870,8 +874,10 @@ content_review.error = An unknown error occurred. The originality review for thi
 content_review.error.createAssignment=The assignment was saved, but Turnitin information was unable to be updated.  Please try saving again.
 content_review.note=<div><br /><em>NOTE, If using Turnitin:</em><ol><li>Set this assignment to &quot;Single Uploaded File only.&quot;</li> <li>Tell students:</li><ol><li>Submit only one attachment.</li><li>Only use file types: Word, PDF, HTML, RTF, PowerPoint, or plain text.</li><li>Always include file extension.</li></ol></ol></div>
 
-noti.releaseresubmission.subject.content=Email notification for assignment with resubmissions allowed
-noti.releaseresubmission.text=Your submission to assignment "{0}" has been corrected and it allows resubmissions. Please go to {1} to view details.
+noti.releaseresubmission.subject.content=Assignment submission has been corrected
+noti.releaseresubmission.text=Your submission to assignment "{0}" has been corrected and it allows resubmissions until the due date. Please go to {1} to view details.
+noti.releaseresubmission.noresubmit.text=Your submission to assignment "{0}" has been corrected. Please go to {1} to view details.
+
 send.submission.releasereturn.email.options=Released Resubmission Notification Email Options:
 send.submission.releasereturn.email.none=Do not send notification email to student when the grade is released and resubmission is available
 send.submission.releasereturn.email=Send notification email to student when the grade is released and resubmission is available
