ULI-748480 - Adding da_evalprovider

--- a/custom_builds/9/distros/10.x/pom.xml
+++ b/custom_builds/9/distros/10.x/pom.xml
@@ -121,6 +121,7 @@
                 <module>evaluation</module>
                 <module>bigbluebutton-sakai/bbb-tool</module>
                 <module>content-review/contentreview-impl</module>
+                <module>da_evalprovider</module>
             </modules>
         </profile>
         <profile>
