--- a/custom_builds/147/distros/sakai-10.x/pom.xml
+++ b/custom_builds/147/distros/sakai-10.x/pom.xml
@@ -83,9 +83,7 @@
                 <module>mailsender</module>
                 <module>memory</module>
                 <module>message</module>
-                <module>metaobj</module>
                 <module>msgcntr</module>
-                <module>osp</module>
                 <module>podcasts</module>
                 <module>polls</module>
                 <module>portal</module>
@@ -93,7 +91,6 @@
                 <module>presence</module>
                 <module>profile2</module>
                 <module>providers</module>
-                <module>reference</module>
                 <module>reset-pass</module>
                 <module>rights</module>
                 <module>roster2</module>
@@ -115,9 +112,17 @@
                 <module>userauditservice</module>
                 <module>usermembership</module>
                 <module>velocity</module>
-                <module>warehouse</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>content-review/contentreview-impl</module>
+                <module>etudes-util</module>
+                <module>melete</module>
+                <module>gradebook2</module>
+                <module>rsmart/util</module>
+                <module>rsmart/user</module>
+                <module>rsmart/user-data-service</module>
+                <module>rsmart/customer</module>
+                <module>cloud-content</module>
             </modules>
         </profile>
         <profile>
