Get a working build

--- a/custom_builds/147/distros/sakai-10.x/pom.xml
+++ b/custom_builds/147/distros/sakai-10.x/pom.xml
@@ -118,6 +118,8 @@
                 <module>etudes-util</module>
                 <module>melete</module>
                 <module>gradebook2</module>
+                <module>evaluation</module>
+                <module>rsmart/common</module>
                 <module>rsmart/util</module>
                 <module>rsmart/user</module>
                 <module>rsmart/user-data-service</module>
