--- a/custom_builds/14/distros/10.x/pom.xml
+++ b/custom_builds/14/distros/10.x/pom.xml
@@ -121,6 +121,8 @@
                 <module>content-review/contentreview-impl</module>
                 <module>melete</module>
                 <module>etudes-util</module>
+                <module>irubric-core</module>
+                <module>irubric-tool</module>
             </modules>
         </profile>
         <profile>
