--- a/custom_builds/154/distros/10.x/pom.xml
+++ b/custom_builds/154/distros/10.x/pom.xml
@@ -124,7 +124,9 @@
                 <module>rsmart/user</module>
                 <module>rsmart/user-data-service</module>
                 <module>rsmart/customer</module>
+                <module>rsmart/certification</module>
                 <module>cloud-content</module>
+                <module>clog</module>
             </modules>
         </profile>
         <profile>
