--- a/custom_builds/155/distros/10.x/pom.xml
+++ b/custom_builds/155/distros/10.x/pom.xml
@@ -128,6 +128,8 @@
                 -->
                 <module>cloud-content</module>
                 <module>clog</module>
+                <module>scorm/SCORMCloud_JavaLibrary</module>
+                <module>scorm</module>
             </modules>
         </profile>
         <profile>
