--- a/custom_builds/154/distros/10.x/pom.xml
+++ b/custom_builds/154/distros/10.x/pom.xml
@@ -123,9 +123,12 @@
                 <module>rsmart/util</module>
                 <module>rsmart/user</module>
                 <module>rsmart/user-data-service</module>
-                <module>rsmart/customer</module>
                 <module>rsmart/certification</module>
+                <!--
+                <module>metaobj</module>
+                <module>rsmart/customer</module>
                 <module>rsmart/integration</module>
+                -->
                 <module>cloud-content</module>
                 <module>clog</module>
             </modules>
