--- a/custom_builds/51/config/branches/sakai-10.x/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
+++ b/custom_builds/51/config/branches/sakai-10.x/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
@@ -57,6 +57,20 @@
 # DEFAULT: true
 # portal.use.tutorial=false
 
+# SAK-25634
+# Add support for Google Analytics to the Portal
+# Google analytics is NOT enabled by default, setting these will enable it
+#
+# portal.google.analytics_id=UA-XXXXXX-XX
+# portal.google.analytics_domain=yoursakaihost.edu
+# portal.google.analytics_detail=true
+
+# SAK-28052
+# Add support for Universal Google Analytics
+# Google analytics is NOT enabled by default, setting these will enable it
+#
+# portal.google.universal_analytics_id=UA-XXXXXX-XX
+
 # ########################################################################
 # GATEWAY SITE
 # ########################################################################
@@ -439,9 +453,6 @@
 # All quotas default to unlimited (0)
 
 # Set the maximum size for resources (content) in sites, does not affect the dropbox
-# OLD setting (still works but you should use the new one instead)
-# siteQuota@org.sakaiproject.content.api.ContentHostingService={value in KB}
-# NEW setting
 # DEFAULT: 0 (unlimited storage/no quota)
 # content.quota={value in KB}
 
@@ -472,6 +483,15 @@
 # KNL-101: Turn on mime type detection
 # DEFAULT: true (on)
 # content.useMimeMagic=false
+
+# KNL-1306 - Support to ignore content from certain types and extensions
+# If this file extension is in the list, the content from the file will not be used to aide in detection of the type
+# DEFAULT: js
+# content.mimeMagic.ignorecontent.extensions=js,html,txt
+
+# If the mime type is in the list returned, it will be redetected without content which may produce a different result
+# DEFAULT: none
+# content.mimeMagic.ignorecontent.mimetypes=text/html,text/plain
 
 # ########################################################################
 # DIGEST
@@ -764,6 +784,10 @@
 # DEFAULT: true
 # portal.use.profile=false
 
+# Allows for adding addditional code into the header of both the standard and pdaa portals, for example for adding in kaltura or other javascript code
+# DEFAULT: Empty, no value
+# portal.include.extrahead=<script type="text/javascript" language="JavaScript" src="/kaltura/javascript/kaltura-display.js"></script>
+
 # ########################################################################
 # SECURITY
 # ########################################################################
@@ -800,11 +824,12 @@
 # - notify - user notified about errors using a non-blocking JS popup 
 # - display - errors are displayed to the user using the new and fancy JS popup 
 # Default: notify
-#content.cleaner.errors.handling = return
+#content.cleaner.errors.handling=return
+
 # Force the logging of errors despite the handling setting 
 # (useful for debugging but can get very noisy)
-# Default: false
-#content.cleaner.errors.display = true
+# Default: false (still it could be logged if content.cleaner.errors.handling=logged above) 
+#content.cleaner.errors.logged=true
 
 # Certain institutions consider Sakai error messages as overly verbose, revealing technical information that is not relevant to the user (e.g., stack traces, SQL error messages, etc.).  
 # You can limit such disclosures by setting portal.error.showdetail to false.
@@ -1476,6 +1501,20 @@
 # Controls the display of the "Total Points" column on the overview screen.
 # DEFAULT: false (Total Points column is not shown)
 #gradebook.display.total.points=false
+
+
+# SAK-27973 Allow for changing default values for displaying course grade/points
+# Default for course points being display (you need the option above for showCoursePoints
+# Default: false
+# gradebook.coursepoints.displayed=true
+
+# Default for course grade displayed
+# Default: false
+# gradebook.coursegrade.displayed=true
+
+# Default for assignments displayed
+# Default: true
+# gradebook.assignments.displayed=false
 
 # ASSIGNMENT 1
 # Allows an instructor or any user with assignments management permissions to submit the assignment on behalf of a student 
@@ -2355,6 +2394,14 @@
 # DEFAULT: true
 # site.setup.import.file = false
 
+# SAK-27575: Sakai 10.0 introduced a notification to the current user that their import is complete
+# DEFAULT: true
+# site.setup.import.notification = false
+
+# SAK-22432: Template descriptions are not copied
+# DEFAULT: true
+# site.setup.copy.template.description = false
+
 # Comma separated list of site types to hide PageOrder tab, 
 # e.g. if set to "course,project", the PageOrder tool tab will be hidden for all course sites and project sites.
 # DEFAULT: none (null)
@@ -2578,6 +2625,10 @@
 # DEFAULT: none (null)
 #samigo.question.show.calculatedquestion=false
 
+
+# In the PDF print output, setting this to true will remove all HTML formatting from the questions and answers (This was a legacy setting just added incase someone was using it or it was causing problems)
+# Default: false
+# samigo.pdf.convertformattedtext=true
 
 #########################################
 # WORKSITE SETUP/SITE INFO
@@ -3007,6 +3058,10 @@
 # DEFAULT: true
 # msgcntr.forums.exclude.deleted.onlywithoutdescendant=false 
 
+# SAK-29934 Enable/disable the Forums rank feature
+# DEFAULT: true
+# msgcntr.forums.ranks.enable=false
+
 ## SAK-19178
 # Should we load the initial jobs on startup.
 # - "init" will schedule the jobs *only* on the first startup of Sakai.
@@ -3171,6 +3226,10 @@
 # Sets the max number of resends before it expires the token
 # DEFAULT: 10
 # accountValidator.maxResendAttempts=
+
+# Sets the 'from' email address and name for password reset emails (if not set, falls back to mail.support)
+# accountValidator.checkValidations.fromEmailAddress=
+# accountValidator.checkValidations.fromEmailName=
 
 
 ## NOTE: All properties in this files should be commented out AND should include a comment indicating the default value and a sample value
@@ -3384,3 +3443,22 @@
 #sitemanage.join.allowedJoinableAccountTypes (count + list) 
 #sitemanage.join.allowedJoinableAccountTypeLabels (count + list) 
 
+# ######################################
+# SIGNUP TOOL added in Sakai 10
+# ######################################
+
+# SAK-27982: Display all signup recurring meetings by default
+# DEFAULT: FALSE
+# signup.showAllRecurMeetings.default=true
+
+# Signup CSV export
+# DEFAULT: FALSE
+# signup.csv.export.enabled=true
+
+# Signup attendance
+# DEFAULT: TRUE
+# signup.enableAttendance=false
+
+# Signup other sites availability
+# DEFAULT: TRUE
+# signup.otherSitesAvailability=false
