--- a/custom_builds/155/distros/10.x/pom.xml
+++ b/custom_builds/155/distros/10.x/pom.xml
@@ -118,14 +118,7 @@
                 <module>melete</module>
                 <module>metaobj</module>
                 <module>gradebook2</module>
-                <module>rsmart/common</module>
-                <module>rsmart/util</module>
-                <module>rsmart/user</module>
-                <module>rsmart/user-data-service</module>
-                <!--
-                <module>rsmart/customer</module>
-                <module>rsmart/integration</module>
-                -->
+                <module>rsmart</module>
                 <module>cloud-content</module>
                 <module>clog</module>
                 <module>scorm</module>
