Fix build by adding in metaobj

--- a/custom_builds/147/distros/sakai-10.x/pom.xml
+++ b/custom_builds/147/distros/sakai-10.x/pom.xml
@@ -119,6 +119,7 @@
                 <module>melete</module>
                 <module>gradebook2</module>
                 <module>evaluation</module>
+                <module>metaobj</module>
                 <module>rsmart/common</module>
                 <module>rsmart/util</module>
                 <module>rsmart/user</module>
