HUC add rsmart integration code

--- a/custom_builds/149/distros/10.x/pom.xml
+++ b/custom_builds/149/distros/10.x/pom.xml
@@ -118,6 +118,9 @@
                 <module>jforum</module>
                 <module>etudes-util</module>
                 <module>melete</module>
+                <module>metaobj</module>
+                <module>rsmart</module>
+                <module>cloud-content</module>
             </modules>
         </profile>
         <profile>
