add jforum to build

--- a/custom_builds/155/distros/10.x/pom.xml
+++ b/custom_builds/155/distros/10.x/pom.xml
@@ -122,6 +122,7 @@
                 <module>cloud-content</module>
                 <module>clog</module>
                 <module>scorm</module>
+                <module>jforum</module>
             </modules>
         </profile>
         <profile>
