--- a/custom_builds/7/assignment/assignment-10.x/assignment-bundles/resources/assignment.properties
+++ b/custom_builds/7/assignment/assignment-10.x/assignment-bundles/resources/assignment.properties
@@ -112,7 +112,7 @@ gen.grading				= Grading
 gen.group	 = Group
 gen.group	 = Groups
 gen.subformat = Select the format for student submission
-group.issubmit   = Are submissions for a group?
+group.issubmit   = Is this a collaborative group submission?
 gen.groupassignment	= Group Submission
 gen.userassignment  = Individual Submission
 gen.section.info    = Section (do not use for group submissions)
@@ -493,9 +493,9 @@ youmust7 = You must type in your answer in the text input area before submission
 list.show = Show
 list.itemsper = items...
 update = Update
-removeSelected = Removed Selected
+removeSelected = Remove Selected
 subasstudent		= Submit as Student
-alert.globalNavi	= If you choose to exit without clicking any action button at the bottom of this page, you will lose your work. Please choose one of these buttons or navigate to your chosen page and abandon your work in this page.
+alert.globalNavi	= If you choose to exit without clicking any of the assignment submission navigation action buttons at the top or bottom of this page, you will lose your work. Please choose one of these buttons or navigate to your chosen page and abandon your work on this page.
 viewassign		= View Assignment
 subexampleassign	= Submit Example Assignment
 viewexampleassign= View Example Assignment
@@ -554,7 +554,7 @@ grades.grade=grade
 grades.members=Users
 #group related variables
 displayto.site = Display to site
-displayto.selected = Display to selected groups
+displayto.selected = Display only to selected groups
 
 range.allgroups = site
 
@@ -654,6 +654,7 @@ uploadall.choose.file.gradeFile.csv=CSV format, file grades.csv
 uploadall.choose.file.gradeFile.excel=EXCEL format, file grades.xls
 uploadall.choose.file.feedbackTexts=Feedback text (the inline comments with student submission)
 uploadall.choose.file.feedbackComments=Feedback comments (comments.txt file if available in student's folder. Comments are put into the Instructor Comments field for each student's submission)
+uploadall.choose.file.includeNotSubmitted=Include students who have not yet submitted
 uploadall.choose.file.confirm = You have selected the archive file for uploading. Files contained in the archive will be uploaded to the corresponding student submission for the assignment.
 uploadall.releaseOption=Select release option
 uploadall.releaseOption.yes=Release uploaded information to students
@@ -718,6 +719,10 @@ nav.prev=< Previous
 nav.list=Return to List
 nav.next=Next >
 nav.message=(Changes will be saved)
+nav.header = Navigate Submissions
+nav.prev.ungraded = < Previous Ungraded
+nav.next.ungraded = Next Ungraded >
+nav.view.subsOnly = Navigate between students with submissions only
 
 gen.opendate.annc = Announce the open date
 
@@ -870,8 +875,10 @@ content_review.error = An unknown error occurred. The originality review for thi
 content_review.error.createAssignment=The assignment was saved, but Turnitin information was unable to be updated.  Please try saving again.
 content_review.note=<div><br /><em>NOTE, If using Turnitin:</em><ol><li>Set this assignment to &quot;Single Uploaded File only.&quot;</li> <li>Tell students:</li><ol><li>Submit only one attachment.</li><li>Only use file types: Word, PDF, HTML, RTF, PowerPoint, or plain text.</li><li>Always include file extension.</li></ol></ol></div>
 
-noti.releaseresubmission.subject.content=Email notification for assignment with resubmissions allowed
-noti.releaseresubmission.text=Your submission to assignment "{0}" has been corrected and it allows resubmissions. Please go to {1} to view details.
+noti.releaseresubmission.subject.content=Assignment submission has been corrected
+noti.releaseresubmission.text=Your submission to assignment "{0}" has been corrected and it allows resubmissions until the due date. Please go to {1} to view details.
+noti.releaseresubmission.noresubmit.text=Your submission to assignment "{0}" has been corrected. Please go to {1} to view details.
+
 send.submission.releasereturn.email.options=Released Resubmission Notification Email Options:
 send.submission.releasereturn.email.none=Do not send notification email to student when the grade is released and resubmission is available
 send.submission.releasereturn.email=Send notification email to student when the grade is released and resubmission is available
