--- a/custom_builds/152/cloud-content/sakai10.x_custom/impl/pom.xml
+++ b/custom_builds/152/cloud-content/sakai10.x_custom/impl/pom.xml
@@ -14,7 +14,7 @@
   <packaging>jar</packaging>
 
   <properties>
-    <jclouds.version>1.9.0</jclouds.version>
+    <jclouds.version>1.9.1</jclouds.version>
   </properties>
 
   <dependencies>
@@ -26,6 +26,10 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
     </dependency>
     <dependency>
       <groupId>commons-logging</groupId>
