they want clog and blogwow

--- a/custom_builds/154/distros/10.x/pom.xml
+++ b/custom_builds/154/distros/10.x/pom.xml
@@ -131,6 +131,7 @@
                 -->
                 <module>cloud-content</module>
                 <module>clog</module>
+                <module>blogwow</module>
                 <module>kaltura</module>
             </modules>
         </profile>
