clog and blogwow #46780

--- a/custom_builds/153/distros/10.x/pom.xml
+++ b/custom_builds/153/distros/10.x/pom.xml
@@ -122,6 +122,7 @@
                 <module>rsmart</module>
                 <module>cloud-content</module>
                 <module>clog</module>
+                <module>blogwow</module>
             </modules>
         </profile>
         <profile>
