--- a/custom_builds/142/distros/10.x/pom.xml
+++ b/custom_builds/142/distros/10.x/pom.xml
@@ -124,6 +124,8 @@
                 <module>irubric-tool</module>
                 <module>gradebook2</module>
                 <module>gradebook-export</module>
+                <module>google-auth-impl</module>
+                <module>gcalendar</module>
             </modules>
         </profile>
         <profile>
