--- a/custom_builds/147/distros/sakai-10.x/pom.xml
+++ b/custom_builds/147/distros/sakai-10.x/pom.xml
@@ -126,6 +126,7 @@
                 <module>rsmart/user-data-service</module>
                 <module>rsmart/customer</module>
                 <module>cloud-content</module>
+                <module>bigbluebutton-sakai/bbb-tool</module>
             </modules>
         </profile>
         <profile>
