--- a/custom_builds/51/distros/10.x/pom.xml
+++ b/custom_builds/51/distros/10.x/pom.xml
@@ -126,6 +126,7 @@
                 <module>bigbluebutton-sakai/bbb-tool</module>
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
+                <module>kaltura</module>
             </modules>
         </profile>
         <profile>
