Kaltura from Github

--- a/custom_builds/142/distros/11.x/pom.xml
+++ b/custom_builds/142/distros/11.x/pom.xml
@@ -122,6 +122,7 @@
                 <module>gcalendar</module>
                 <module>gradebook2</module>
                 <module>webservices</module>
+                <module>kaltura</module>
             </modules>
         </profile>
         <profile>
