Trying again to get working build

--- a/custom_builds/163/distros/rsmart-2.9.5.3/pom.xml
+++ b/custom_builds/163/distros/rsmart-2.9.5.3/pom.xml
@@ -34,66 +34,6 @@
     </organization>
     <profiles>
         <profile>
-            <id>pack</id>
-            <modules>
-		<module>master</module>
-                <module>pack/pack-src</module>
-                <module>pack/pack-bin</module>
-                <module>pack/pack-demo</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>pack-bin</id>
-            <modules>
-	        <module>master</module>
-                <module>pack/pack-bin</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>pack-demo</id>
-            <modules>
-                <module>master</module>
-                <module>pack/pack-demo</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>pack-src</id>
-            <modules>
-                <module>master</module>
-                <module>pack/pack-src</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>framework</id>
-            <modules>
-                <module>kernel-deploy</module>
-                <module>framework-shared-deploy</module>
-                <module>jstl-shared-deploy</module>
-                <module>access</module>
-                <module>alias</module>
-                <module>announcement/announcement-api/api</module>
-                <module>authz</module>
-                <module>config</module>
-                <module>content</module>
-                <module>courier</module>
-                <module>dav</module>
-                <module>login</module>
-                <module>master</module>
-                <module>memory</module>
-                <module>message/message-api/api</module>
-                <module>portal</module>
-                <module>presence/presence-api/api</module>
-                <!-- <module>jobscheduler/scheduler-api</module> -->
-                <module>reference/library</module>
-                <module>site</module>
-                <module>site-manage</module>
-                <module>tool</module>
-                <module>user</module>
-                <module>velocity</module>
-                <module>web</module>
-            </modules>
-        </profile>
-        <profile>
             <id>rsmart</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
@@ -103,10 +43,11 @@
             </activation>
             <modules>
                 <module>master</module>
-                <module>rsmart/rsmart-Decryption/api</module>
-                <module>rsmart/antivirus/api</module>
+                <module>providers</module>
+                <module>rsmart</module>
                 <module>kernel</module>
                 <module>kernel-deploy</module>
+                <module>hybrid</module>
                 <!--module>core-deploy</module-->
                 <module>jstl-shared-deploy</module>
                 <module>access</module>
@@ -145,10 +86,9 @@
                 <!--module>gmt</module-->
 		<module>external-calendaring-service</module>
                 <module>gradebook</module>
-                <module>gradebook2</module>
+                <!--module>gradebook2</module-->
                 <module>help</module>
                 <module>hierarchy</module>
-                <module>hybrid</module>
                 <module>iclicker</module>
                 <module>itunesu-tool</module>
 		<!--module>jforum</module--> 
@@ -177,7 +117,6 @@
                 <module>portal</module>
                 <module>postem</module>
                 <module>presence</module>
-                <module>providers</module>
                 <module>profile</module>
                 <module>profile2</module>
 
